--- a/behat.yml
+++ b/behat.yml
@@ -1,15 +1,11 @@
 default:
     suites:
-        domain:
-            contexts: [ BasketContext ]
-
         web:
             contexts: [ WebBasketContext ]
-            filters:  { tags: 'critical' }
 
     extensions:
         Behat\MinkExtension:
             base_url: 'http://localhost:8000'
             sessions:
                 default:
-                    goutte: ~
+                    selenium2: ~
