--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "silex/silex": "~1.2.2"
+        "silex/silex": "~1.2.2",
+        "doctrine/dbal": "~2.5.1"
     },
 
     "require-dev": {
@@ -9,16 +10,14 @@
         "phpunit/phpunit": "~4.3.1",
         "behat/mink": "~1.6.0",
         "behat/mink-extension": "~2.0.0",
-        "behat/mink-goutte-driver": "~1.1.0"
+        "behat/mink-goutte-driver": "~1.1.0",
+        "behat/mink-selenium2-driver": "~1.2.0",
+        "everzet/persisted-objects": "~1.0.0"
     },
 
     "autoload": {
         "psr-0": {
             "": "src/"
         }
-    },
-
-    "config": {
-        "bin-dir": "bin/"
     }
 }
