--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     },
 
     "require-dev": {
-        "behat/behat": "~3.0.13",
-        "phpspec/phpspec": "~2.1.0-RC2",
-        "phpunit/phpunit": "~4.3.1",
-        "behat/mink": "~1.6.0",
+        "behat/behat": "~3.2.2",
+        "phpspec/phpspec": "~3.1.1",
+        "phpunit/phpunit": "~5.6.0",
+        "behat/mink": "~1.7.1",
         "behat/mink-extension": "~2.0.0",
         "behat/mink-goutte-driver": "~1.1.0",
-        "behat/mink-selenium2-driver": "~1.2.0",
+        "behat/mink-selenium2-driver": "~1.3.1",
         "everzet/persisted-objects": "~1.0.0"
     },
 
