--- a/behat.yml
+++ b/behat.yml
@@ -1,11 +1,11 @@
 default:
     suites:
         web:
-            contexts: [ WebBasketContext ]
+            contexts: [ 'WebBasketContext' ]
 
     extensions:
         Behat\MinkExtension:
             base_url: 'http://localhost:8000'
             sessions:
                 default:
-                    selenium2: ~
+                    selenium2: { browser: 'chrome' }
