Mark only the last scenario as end-to-end

--- a/behat.yml
+++ b/behat.yml
@@ -1,6 +1,8 @@
 default:
     suites:
         web:
+            filters:
+                tags: '@e2e'
             contexts:
                 - WebBasketContext: [ 'test' ]
         domain:
