Separate test and prod environments

--- a/behat.yml
+++ b/behat.yml
@@ -6,7 +6,7 @@ default:
 
     extensions:
         Behat\MinkExtension:
-            base_url: 'http://localhost:8000'
+            base_url: 'http://localhost:8000/index_test.php'
             sessions:
                 default:
                     selenium2: { browser: 'chrome' }
