--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "silex/silex": "~1.2.2",
-        "doctrine/dbal": "~2.5.1"
+        "doctrine/dbal": "~2.5.1",
+        "moneyphp/money": "^3.0"
     },
 
     "require-dev": {
